# cripto-project

./: CMakeCache.txt  CMakeLists.txt  HowToCompileSeal.txt  HowToInstallSeal.txt  Makefile  README.md  cmake_install.cmake  cripto_project  cripto_project.cbp  main.cpp  main.h
lib/assets/certificates/: cacert.pem  cakey.pem  commands.txt
lib/assets/certificates/client/: client_cert.crt  client_cert.csr  client_cert.p12  client_key.key
lib/assets/certificates/database/: db_pbkey.key  db_relkey.key  db_sckey.key  parms.pem
lib/assets/certificates/root/: root_cacert.crt  root_cacert.srl  root_cakey.key
lib/assets/certificates/server/: csc_server.csc_server.crt  csc_server.csr  csc_server.pem
lib/assets/encryptions/: database_encryption.cpp
lib/assets/examples/default/: 1_bfv_basics.cpp
lib/assets/examples/encryption-lab/: FitnessTracker.sln  README.md
lib/assets/examples/encryption-lab/FitnessTracker.Common/: FitnessTracker.Common.csproj
lib/assets/examples/encryption-lab/FitnessTrackerAPI/: FitnessTrackerAPI.csproj  Program.cs  Startup.cs
lib/assets/examples/encryption-lab/FitnessTrackerClient/: FitnessTrackerClient.cs  FitnessTrackerClient.csproj  Program.cs
lib/assets/examples/test/: test_run.cpp  test_run.h
lib/encryptions/: database_encryption.h
lib/encryptions/data/: data_encryption.cpp  data_encryption.h
lib/encryptions/database/: database_encryption.cpp  database_encryption.h
lib/outputs/: key_files.cpp  key_files.h
lib/processing/: data_processing.cpp  data_processing.h
newdir/: exec
(+3 files in other folders)
